codigo con todas las modificaciones correspondientes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,13 @@ endorsed.classpath=
 excludes=
 file.reference.commons-net-3.6.jar=C:\\Users\\crist\\Downloads\\commons-net-3.6\\commons-net-3.6.jar
 file.reference.edisoncorSX.jar=C:\\Users\\crist\\Downloads\\edisoncorSX.jar
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Program Files (x86)\\Java\\jre1.8.0_161\\lib\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${libs.commons-net-3.6.classpath}:\
     ${file.reference.commons-net-3.6.jar}:\
-    ${file.reference.edisoncorSX.jar}
+    ${file.reference.edisoncorSX.jar}:\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
